--- a/_dev/css/components/categories.scss
+++ b/_dev/css/components/categories.scss
@@ -146,7 +146,7 @@
 #search_filters,
 #search_filters_brands,
 #search_filters_suppliers {
-  @include box-shadow;
+  //@include box-shadow;
   margin-bottom: 1.563rem;
   background: white;
   padding: 1.563rem 1.25rem;
@@ -245,7 +245,7 @@
   }
 }
 .block-categories {
-  @include box-shadow;
+  //@include box-shadow;
   background: white;
   padding: 1.563rem 1.25rem;
   margin-bottom: 1.563rem;
